tests/snapshots/app__filter_snapshot.snap
---
source: tests/app.rs
expression: "render(&mut a, 120, 24)"
---
┌ /snap/left ──────────────────────────────────────────────┐┌ /snap/right/with a long name ────────────────────────────┐
│Name                                      Size Modified   ││Name                                      Size Modified   │
│ ..                                       <UP>            ││ ..                                       <UP>            │
│▸file2.txt                               97.7K 09-24 14:13││ only                                        7 09-21 14:13│
│ file10.txt                               1234 09-23 14:13││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└ 1 marked, 97.7K, 2 of 12 entries (filter: FILE) ─────────┘└ 1 entry, 123.0G free ────────────────────────────────────┘
Filter: FILE                                                                                        Ctrl+E: command line
/snap/left$                                                                                                             
F1Help      F2          F3View      F4Edit      F5Copy      F6Move      F7Mkdir     F8Trash     F9          F10Quit
