tests/snapshots/app__form_compare.snap
---
source: tests/app.rs
expression: "render(&mut a, 80, 24)"
---
┌ /snap/left ──────────────────────────┐┌ /snap/right/with a long name ────────┐
│Name                  Size Modified   ││Name                  Size Modified   │
│ ..                   <UP>            ││ ..                   <UP>            │
│ .config             <DIR> 09-22 14:13││ only                    7 09-21 14:13│
│ src                 <DIR> 09-21 14:13││                                      │
│ -leading                2 09-27 14:13││                                      │
│ bad\xff\xfeutf8         4 09-29 14:13││                                      │
│ ┌ Compare directories ─────────────────────────────────────────────────────┐ │
│▸│Mark the entries that differ between the two panels.                      │ │
│ │Compare  (•) by date and size  ( ) by content                             │ │
│ │[x] include directories                                                   │ │
│ │Existing marks are replaced. Hidden and filtered-out entries              │ │
│ │do not take part.                                                         │ │
│ │Tab: next field   Enter: OK   Esc: cancel                                 │ │
│ └──────────────────────────────────────────────────────────────────────────┘ │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└ 1 marked, 97.7K, 123.0G free ────────┘└ 1 entry, 123.0G free ────────────────┘
/snap/left$                                                                     
F1Help  F2      F3View  F4Edit  F5Copy  F6Move  F7Mkdir F8Trash F9      F10Quit
