tests/snapshots/app__panel_snapshot_200x60.snap
---
source: tests/app.rs
expression: "render(&mut a, 200, 60)"
---
┌ /snap/left ──────────────────────────────────────────────────────────────────────────────────────┐┌ /snap/right/with a long name ────────────────────────────────────────────────────────────────────┐
│Name                                                  Ext         Size Modified         Mode      ││Name                                                  Ext         Size Modified         Mode      │
│ ..                                                               <UP>                            ││ ..                                                               <UP>                            │
│ .config                                                         <DIR> 2026-09-22 14:13 drwx------││ only                                                                7 2026-09-21 14:13 -rw-------│
│ src                                                             <DIR> 2026-09-21 14:13 drwxr-xr-x││                                                                                                  │
│ -leading                                                            2 2026-09-27 14:13 -rw-r--r--││                                                                                                  │
│ bad\xff\xfeutf8                                                     4 2026-09-29 14:13 -rw-r--r--││                                                                                                  │
│ big                                                  iso         4.4G 2026-10-02 14:13 -rw-r--r--││                                                                                                  │
│▸file2                                                txt        99999 2026-09-24 14:13 -rw-r--r--││                                                                                                  │
│ file10                                               txt         1234 2026-09-23 14:13 -rw-r--r--││                                                                                                  │
│ it's                                                                3 2026-09-28 14:13 -rw-r--r--││                                                                                                  │
│ link                                                                8 2026-10-01 14:13 lrwxrwxrwx││                                                                                                  │
│ LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL~                5 2026-09-30 14:13 -rw-r--r--││                                                                                                  │
│ new\nline                                                           1 2026-09-26 14:13 -rw-r--r--││                                                                                                  │
│ run                                                  sh           512 2026-09-25 14:13 -rwxr-xr-x││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└ 1 marked, 97.7K, 123.0G free ────────────────────────────────────────────────────────────────────┘└ 1 entry, 123.0G free ────────────────────────────────────────────────────────────────────────────┘
/snap/left$                                                                                                                                                                                             
1Help               2                   3View               4Edit               5Copy               6Move               7Mkdir              8Trash              9                   10Quit
