tests/snapshots/app__panel_snapshot_80x24.snap
---
source: tests/app.rs
expression: "render(&mut a, 80, 24)"
---
┌ /snap/left ──────────────────────────┐┌ /snap/right/with a long name ────────┐
│Name                  Size Modified   ││Name                  Size Modified   │
│ ..                   <UP>            ││ ..                   <UP>            │
│ .config             <DIR> 09-22 14:13││ only                    7 09-21 14:13│
│ src                 <DIR> 09-21 14:13││                                      │
│ -leading                2 09-27 14:13││                                      │
│ bad\xff\xfeutf8         4 09-29 14:13││                                      │
│ big.iso              4.4G 10-02 14:13││                                      │
│▸file2.txt           97.7K 09-24 14:13││                                      │
│ file10.txt           1234 09-23 14:13││                                      │
│ it's                    3 09-28 14:13││                                      │
│ link                    8 10-01 14:13││                                      │
│ LLLLLLLLLLLLLLLL~       5 09-30 14:13││                                      │
│ new\nline               1 09-26 14:13││                                      │
│ run.sh                512 09-25 14:13││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└ 1 marked, 97.7K, 123.0G free ────────┘└ 1 entry, 123.0G free ────────────────┘
/snap/left$                                                                     
1Help   2       3View   4Edit   5Copy   6Move   7Mkdir  8Trash  9       10Quit
