tests/snapshots/app__question_file_exists.snap
---
source: tests/app.rs
expression: "render(&mut a, 80, 24)"
---
┌ /snap/left ──────────────────────────┐┌ /snap/right/with a long name ────────┐
│Name                  Size Modified   ││Name                  Size Modified   │
│ ..                   <UP>            ││ ..                   <UP>            │
│ .config             <DIR> 09-22 14:13││ only                    7 09-21 14:13│
│ src                 <DIR> 09-21 14:13││                                      │
│ -leading                2 09-27 14:13││                                      │
│ ┌ File exists ─────────────────────────────────────────────────────────────┐ │
│ │/snap/dst/report.pdf                                                      │ │
│▸│new     : 2048 bytes, 2026-09-21 14:13:20                                 │ │
│ │existing: symlink, 2026-05-28 20:26:40, read-only                         │ │
│ │The link is replaced; its target is not touched.                          │ │
│ │                                                                          │ │
│ │[ Overwrite ] [ Overwrite all ] [ Overwrite all older ] [ Skip ]          │ │
│ │[ Skip all ] [ Rename ] [ Cancel job ]                                    │ │
│ └──────────────────────────────────────────────────────────────────────────┘ │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└ 1 marked, 97.7K, 123.0G free ────────┘└ 1 entry, 123.0G free ────────────────┘
/snap/left$                                                                     
1Help   2       3View   4Edit   5Copy   6Move   7Mkdir  8Trash  9       10Quit
